--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
             <% if session[:guest_gamer_id] == nil %>
               <a href="/gamers/sign_up"><%= t :sign_up %></a>
             <% else %>
-              <a href="<%=guest_continue_sign_up_path%>"><%= t :become_member %>
+              <a href="<%=guest_continue_sign_up_path%>"><%= t :become_member %></a>
             <% end %>
           </li>
           <li class="divider-vertical"></li>
