--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -33,8 +33,16 @@
                   <div style="padding:5px; text-align:center;">
                   <span><%= t(:existing_account) %></span>
                 </div>
-                <div class="providers">
-                  <a href="/auth/facebook"><img src="/assets/facebook_logo.png" width="60px"></a>
+                <div class="providers" style="text-align:center;">
+                  <a href="/auth/facebook" style="width:50px; padding:0px;margin:0px; display:inline-block;">
+                    <img src="/assets/facebook-lgn.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
+                  </a>
+                  <a href="#" style="width:50px; padding:0px;margin:0px; display:inline-block;">
+                    <img src="/assets/twitter-lgn.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
+                  </a>
+                  <a href="#" style="width:50px; padding:0px;margin:0px; display:inline-block;">
+                    <img src="/assets/google_64.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
+                  </a>
                 </div>
               <% end %>
 
