--- a/arability/app/views/devise/registrations/new_social.html.erb
+++ b/arability/app/views/devise/registrations/new_social.html.erb
@@ -15,20 +15,28 @@
     <% end %>
 
     <div class="container">
-        <div><%= f.label t(:email), :class => "control-label" %>
-        <%= f.email_field :email, :style => "margin-left: 10px;", :value => @email  %></div></br>
+        <div class="control-group success">
+            <div class="controls">
+                <%= f.label t(:email), :class => "control-label" %>
+                <%= f.email_field :email, :style => "margin-left: 10px;", :value => @email, :readonly => "readonly", :id => "inputSuccess"  %>
+            </div>
+        </div></br>
 
-        <div><%= f.label t(:username), :class => "control-label" %>
-        <%= f.text_field :username, :style => "margin-left: 10px;", :value => @username  %></div></br>
+        <div class="control-group success">
+            <div class="controls">
+                <%= f.label t(:username), :class => "control-label" %>
+                <%= f.text_field :username, :style => "margin-left: 10px;", :value => @username, :id => "inputSuccess" %>
+            </div>
+        </div></br>
 
-        <div><%= f.label t(:gender), :class => "control-label" %>
-        <% if I18n.locale == :ar %>
-            <%= f.select(:gender,options_for_select([['ذكر','male'],['انثي','female']], {:selected => @gender}),{}, :style => "margin-left: 10px;" ) %> 
-        <% else %>
-            <%= f.select(:gender,options_for_select(['male','female'],{:selected => @gender}),{}, :style => "margin-left: 10px;") %> 
-        <% end %> </div></br>
-
-        <span style="color:red;"><b><i>*<%= t(:fill_in_next) %></i></b></span><br><br>
+        <div class="control-group success">
+            <%= f.label t(:gender), :class => "control-label" %>
+            <% if I18n.locale == :ar %>
+                <%= f.select(:gender,options_for_select([['ذكر','male'],['انثي','female']], {:selected => @gender}),{}, :style => "margin-left: 10px;" ) %> 
+            <% else %>
+                <%= f.select(:gender,options_for_select(['male','female'],{:selected => @gender}),{}, :style => "margin-left: 10px;" ) %> 
+            <% end %>
+        </div></br>
 
         <div><%= f.label t(:date_of_birth), :class => "control-label" %>
         <%=  f.date_select :date_of_birth, {:start_year => Time.now.year, 
