adjusing the tutorial to work with the guest

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_include_tag "jquery.tools.min" %>
 <script type="text/javascript" charset="utf-8">
-  tutorialFlag = <%= current_gamer.show_tutorial %>;
+  tutorialFlag = <%= current_or_guest_gamer.show_tutorial %>;
   var words;
   var cache = "";
   var nav_locked = false;
