--- a/arability/app/views/authentications/twitter_signin.html.erb
+++ b/arability/app/views/authentications/twitter_signin.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag('/authentications/twitter_signin') do %>
+<%= form_tag("/authentications/twitter_signin") do %>
   <%= label_tag(t(:email)) %>
   <%= email_field(:gamer, :address) %>
   <%= label_tag(t(:password)) %>
