--- a/arability/app/views/guest/sign_up.html.erb
+++ b/arability/app/views/guest/sign_up.html.erb
@@ -3,20 +3,35 @@
   <div class="row-fluid">
     <div class="span3">
       <div class="well">
-        <strong>Thanks for choosing Arability!</strong>
-        <br />
-        To enjoy the full Arability experience <%= link_to "click here",  new_gamer_registration_path%>
-        <br />
-        Why become a full member not just a guest:
-        <br />
-        <ul>
-          <li>All it takes is just an email and password</li>
-          <li>Earn prizes and trophies</li>
-          <li>Compete with your friends</li>
-          <li>Share your score on facebook and twitter</li>
-          <li>Invite your friends</li>
-          <li>Enjoy a free trial of Arability developers</li>
-        </ul>
+        <% if I18n.locale == :en %>
+          <strong>Thanks for choosing Arability!</strong>
+          <br />
+          Why become a full member not just a guest:
+          <br />
+          <ul>
+            <li>All it takes is just an email and password</li>
+            <li>Earn prizes and trophies</li>
+            <li>Compete with your friends</li>
+            <li>Share your score on facebook and twitter</li>
+            <li>Invite your friends</li>
+            <li>Enjoy a free trial of Arability developers</li>
+          </ul>
+          To enjoy the full Arability experience <%= link_to "sign up here",  new_gamer_registration_path%>
+        <% else %>
+          <strong>شكرا لاختيار عربيليتي!</strong>
+          <br />
+          لماذا تصبح عضو دائم وليس مجرد زائر:
+          <br />
+          <ul>
+            <li>كل مايلزم هو بريد إلكتروني وكلمة سر</li>
+            <li>اكسب جوائز وإنجازات</li>
+            <li>تنافس مع اصدقائك</li>
+            <li>شارك بنتيجتك على facebook و twitter</li>
+            <li>ادعو اصدقائك</li>
+            <li>تمتع بتجربة مجانية لمطورون لعربيليتي</li>
+          </ul>
+          للتمتع بالتجربة الكاملة لعربيليتي <%= link_to "اشترك من هنا",  new_gamer_registration_path%>
+        <% end %>
       </div>
     </div>
     <div class="span9">
