--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -115,10 +115,23 @@
     <a class="btn pull-right" href="/developers/projects/<%= project1.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
   <% end %>
   <% if I18n.locale == :ar %>
-    <a class="btn pull-left" href="/developers/projects/remove_project_from_developer?dev_id=<%=@developer.id %>&project_id=<%= project1.id %>"><i class="icon-remove"></i><%= t(:delete)%></a>
+   <a style="margin-left : 6px;" href="#remove_modal" role="button" class="btn pull-left btn-danger" onClick="modalToggle()" id="LaunchDemo"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% else %>
-    <a class="btn pull-right" href="/developers/projects/remove_project_from_developer?dev_id=<%=@developer.id %>&project_id=<%= project1.id %>"><i class="icon-remove"></i><%= t(:delete)%></a>
+  <a style="margin-right : 6px;" href="#remove_modal" role="button" class="btn pull-right btn-danger" onClick="modalToggle()" id="LaunchDemo"> <i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% end %>
+    <div id="remove_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3 id="modal_label"><%= t(:delete) %></h3>
+      </div>
+      <div class="modal-body">
+        <h4><%= t(:confirm)%></h4>
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal"><%= t(:close_delete) %></button>
+        <%= link_to t(:submit_delete), "/developers/projects/remove_project_from_developer/#{developer.id}&#{project1.id}",:class => "btn btn-danger" %>
+      </div>
+    </div>
   <br />
 </div>
     </td>
