--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -267,8 +267,18 @@
 	<div class="alert alert-success" id="report_success" style="display:none;">
 		<div style="text-align:center;"><%= t(:report_sent_success) %></div>
 	</div>
-	<a href="#report_modal" role="button" class="btn" onClick="modalToggle()" id="LaunchDemo"><%= t(:report) %></a>
-
+	<div class="well">
+		<span><%=  t(:help_us_report) %></span>
+		<a href="#report_modal" role="button" class="btn btn-link" onClick="modalToggle()"
+			style="padding:0px;" id="launch_report"><%= t(:report) %></a>
+	</div>	
+	<script type="text/javascript">
+		<% if I18n.locale == :ar %>
+			$("#launch_report").css("font-size","18px");
+		<% else %>
+			$("#launch_report").css("font-size","13px");
+		<% end %>
+	</script>
 	<div id="report_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-header">
 		  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
