[issue #350] fixed syntax

--- a/arability/app/views/pages/home.html.erb
+++ b/arability/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :home_content do %>
-    <style>
+    <style> 
 
     /* GLOBAL STYLES
     -------------------------------------------------- */
@@ -281,18 +281,12 @@
         <p class="lead"> <span class="muted"><%= t(:featgameh1) %></span><br><%= t(:featgameb1) %></p>
         <p class="lead"> <span class="muted"><%= t(:featdevh2) %></span><br><%= t(:featgameb2) %></p>
       </div>
-
-
+      
       <hr class="featurette-divider">
-
       <!-- /END THE FEATURETTES -->
 
-
-      <!-- FOOTER -->
       <footer>
         <p>&copy; <%= t(:developed_by) %></p>
       </footer>
-
-    </div><!-- /.container -->
-
+    </div>
 <% end %>
