--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -18,9 +18,7 @@
           <li><%= link_to(t(:arabic), url_for(locale: :ar)) %></li>
         <% end %>
       <% if !gamer_signed_in? %>
-          <li></li>
           <li><a href="/gamers/sign_up"><%= t :sign_up %></a></li>
-          <li></li>
           <li class="dropdown">
           <a class="dropdown-toggle" href="#" data-toggle="dropdown"><%= t :sign_in %> <strong class="caret"></strong></a>
             <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
@@ -33,13 +31,8 @@
           </li>
       <% else %>
         <li><%= link_to t(:backend), backend_home_path %></li>
-        <% if I18n.locale==:en %>
-        <li><a href="/gamers/edit">Settings</a></li>
-        <li><a href="/gamers/sign_out">Sign out</a></li>
-        <% else I18n.locale==:ar %>
-        <li><a href="/gamers/edit">تغيير البيانات</a></li>
-        <li><a href="/gamers/sign_out">تسجيل خروج</a></li>
-        <% end %>
+        <li><a href="/gamers/edit"><%= t(:settings) %></a></li>
+        <li><a href="/gamers/sign_out"><%= t(:sign_out) %></a></li>
       <% end %>
       </ul>
       </div>
