--- a/arability/app/views/games/halloffame.html.erb
+++ b/arability/app/views/games/halloffame.html.erb
@@ -4,17 +4,26 @@
   {
     if(clicked_id == 1)
     {
-      
+      $("#all").empty();
+      $.get("mainhalloffame.html", function(data){
+          $("#all").append(data);
+        });
     }
     else
     {
       if(clicked_id == 2)
       {
-        
+        $("#all").empty();
+        $.get("facebookhalloffame.html", function(data){
+          $("#all").append(data);
+        });
       }
       else
       {
-        
+        $("#all").empty();
+        $.get("twitterhalloffame.html", function(data){
+          $("#all").append(data);
+        });
       }
     }
   }
@@ -33,7 +42,7 @@
 
 <div id="all">
   <table class="table">
-    <thead align="center">
+    <thead align="center" style="font-weight:bold;">
       <tr>
         <td><%= t(:rank) %></td>
         <td><%= t(:name) %></td>
@@ -59,87 +68,6 @@
         </td>
       </tr>
       <br>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-
-<div id = "twitter">
-  <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="60" />
-  <p><%= t(:your_twitter_friends) %></p>
-  <% common = Authentication.get_common_twitter_followers(current_gamer) %>
-  <% if common.nil? %>
-  <p><%= t(:not_connected_to_twitter) %></p>
-  <% else %>
-  <table class="table">
-    <thead align="center">
-      <tr>
-        <td><%= t(:rank) %></td>
-        <td><%= t(:name) %></td>
-        <td><%= t(:highest_score) %></td>
-        <td><%= t(:trophies) %></td>
-      </tr>
-    </thead>
-    <tbody align="center">
-      <% @gamers = Gamer.find(common, :order => "highest_score DESC") %>
-      <% rank = 0 %>
-      <% @gamers.each do |user| %>
-      <tr>
-        <td><%= rank = rank + 1 %></td>
-        <td><%= user.username %></td>
-        <td><%= user.highest_score %></td>
-        <% @Trophies = Gamers_Trophy.find_by_gamer_id(user.id) %>
-        <td>
-          <% if @Trophies.nil? %>
-          <p><%= t(:no_trophies) %></p>
-          <% else %>
-          <%= @Trophies.trophy_id %>
-          <% end %>
-        </td>
-      </tr>
-      <br>
-      <% end %>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-
-<div id = "facebook">
-  <img alt="Facebook" class="border-none" src="/assets/facebook_logo.png" width="40" />
-  <br>
-  <p><%= t(:your_facebook_friends) %></p>
-  <% common = Authentication.get_common_facebook_friends(current_gamer) %>
-  <% if common.nil? %>
-  <p><%= t(:not_connected_to_facebook) %></p>
-  <% else %>
-  <table class="table">
-    <thead align="center">
-      <tr>
-        <td><%= t(:rank) %></td>
-        <td><%= t(:name) %></td>
-        <td><%= t(:highest_score) %></td>
-        <td><%= t(:trophies) %></td>
-      </tr>
-    </thead>
-    <tbody align="center">
-      <% @gamers = Gamer.find(common, :order => "highest_score DESC") %>
-      <% rank = 0 %>
-      <% @gamers.each do |user| %>
-      <tr>
-        <td><%= rank = rank + 1 %></td>
-        <td><%= user.username %></td>
-        <td><%= user.highest_score %></td>
-        <% @Trophies = Gamers_Trophy.find_by_gamer_id(user.id) %>
-        <td>
-          <% if @Trophies.nil? %>
-          <p><%= t(:no_trophies) %></p>
-          <% else %>
-          <%= @Trophies.trophy_id %>
-          <% end %>
-        </td>
-      </tr>
-      <br>
-      <% end %>
       <% end %>
     </tbody>
   </table>
