--- a/arability/app/views/guest/sign_up.html.erb
+++ b/arability/app/views/guest/sign_up.html.erb
@@ -97,13 +97,13 @@
 
         <div><%= f.label t(:date_of_birth), :class => "control-label" %>
         <%=  f.date_select :date_of_birth, {:start_year => Time.now.year, 
-            :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %></div></br>
+            :end_year => Time.now.year - 95, :default => @dob2}, :style => "margin-left: 10px;" %></div></br>
 
         <div><%= f.label t(:gender), :class => "control-label" %>
         <% if I18n.locale == :ar %>
-            <%= f.select(:gender,options_for_select([['ذكر','male'],['انثي','female']]),{}, :style => "margin-left: 10px;" ) %></div></br>
+            <%= f.select(:gender,options_for_select([['ذكر','male'],['انثي','female']],:selected => @gender),{}, :style => "margin-left: 10px;" ) %></div></br>
         <% else %>
-            <%= f.select(:gender,options_for_select(['male','female']),{}, :style => "margin-left: 10px;" ) %></div></br> 
+            <%= f.select(:gender,options_for_select(['male','female'], :selected => @gender),{}, :style => "margin-left: 10px;" ) %></div></br> 
         <% end %>  
 
         <div><%= f.label t(:country), :class => "control-label" %>
@@ -112,12 +112,16 @@
                     ['الاردن','Jordan'],['السعودية','Saudi Arabia'],['ليبيا','Libya'],['الامارات','United Arab Emirates'],['قطر','Qatar'],['الكويت','Kuwait'],
                     ['العراق','Iraq'],['الجزأئر','Algeria'],['المغرب','Morocco'],['البحرين','Bahrain'],
                     ['موريتانيا','mauritania'],['الصومال','Somalia'],['السودان','Sudan'],['تونس','Tunisia'],
-                    ['اخري','others']]), {},
+                    ['اخري','others']], :selected => @country), {},
                 {:style => "margin-left: 10px;" }) %>
             </div></br>
         <% else %>
             <span style="margin-left: 10px;">
-                <%= f.country_select :country, [ "Egypt", "Lebanon", "Jordan" ]%>
+              <% if @country != nil %>
+                <%= f.country_select :country, ["#{@country}" ,"Egypt", "Lebanon", "Jordan"]%>
+              <% else %>
+                <%= f.country_select :country, ["Egypt", "Lebanon", "Jordan"]%>
+              <% end%>
             </span></div></br>
         <% end %>
 
@@ -125,9 +129,9 @@
         <div><%= f.label t(:education_level), :class => "control-label" %>
         <% if I18n.locale == :ar %>
             <%= f.select(:education_level, options_for_select(['',['مدرسة','School'],['جامعة','University'],
-            ['خريج','Graduate']]), {}, { :style => "margin-left: 10px;" }) %></br></div>
+            ['خريج','Graduate']], :selected => @education), {}, { :style => "margin-left: 10px;" }) %></br></div>
         <% else %>
-            <%= f.select(:education_level, options_for_select(['','School','University','Graduate']), {}, { :style => "margin-left: 10px;" }) %></br></div>
+            <%= f.select(:education_level, options_for_select(['School','University','Graduate'], :selected => @education), {}, { :style => "margin-left: 10px;" }) %></br></div>
         <% end %>
 
 
