[#349][WIP] basic function

--- a/arability/app/views/admin/_sidebar-nav.html.erb
+++ b/arability/app/views/admin/_sidebar-nav.html.erb
@@ -4,6 +4,9 @@
 			<li <%= active == "dashboard"? "class=active" : "" %>>
 				<a href="/admin">الصفحة الرئيسية</a>
 			</li>
+			<li <%= active == "list-users"? "class=active" : "" %>>
+				<a href="/admin/list/users">عرض المشتركيين</a>
+			</li>
 			<li class="nav-header">إدارة الكلمات</li>
 			<li class="divider"></li>
 			<li <%= active == "add-word"? "class=active" : "" %>>
