--- a/arability/app/views/games/facebookhalloffame.html.erb
+++ b/arability/app/views/games/facebookhalloffame.html.erb
@@ -18,7 +18,7 @@
       </tr>
     </thead>
     <tbody align="center">
-      <% @gamers = Gamer.find(common, :order => "highest_score DESC") %>
+      <% @gamers = Gamer.find(common, :order => "highest_score DESC", limit: 10) %>
       <% rank = 0 %>
       <% @gamers.each do |user| %>
       <% if user == current_gamer %>
