--- a/arability/app/views/games/halloffame.html.erb
+++ b/arability/app/views/games/halloffame.html.erb
@@ -51,7 +51,7 @@
       </tr>
     </thead>
     <tbody align="center">
-      <% @gamers = Gamer.find(:all, :order => "highest_score DESC") %>
+      <% @gamers = Gamer.find(:all, order: "highest_score DESC", limit:10) %>
       <% rank = 0 %>
       <% @gamers.each do |user| %>
       <% if user == current_gamer %>
