--- a/arability/app/views/games/mainhalloffame.html.erb
+++ b/arability/app/views/games/mainhalloffame.html.erb
@@ -1,4 +1,8 @@
 <div id="all">
+  <p>
+    <%= t(:your_rank) %>
+    <%= Gamer.get_gamer_rank(current_gamer) %>
+  </p>
   <table class="table">
     <thead align="center" style="font-weight:bold;">
       <tr>
@@ -9,7 +13,7 @@
       </tr>
     </thead>
     <tbody align="center">
-      <% @gamers = Gamer.find(:all, :order => "highest_score DESC") %>
+      <% @gamers = Gamer.find(:all, :order => "highest_score DESC", limit: 10) %>
       <% rank = 0 %>
       <% @gamers.each do |user| %>
       <% if user == current_gamer %>
