[#issue #350] fixed code

--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
   }
 </style>
 <%= yield(:home_content) %>
-<!-- <div id="testing"> -->
+<div id="navbar">
   <div role="main" id="main">
     <div class="container">
       <div class="content">
@@ -42,7 +42,7 @@
       </div>
     </div>
   </div>
-<!-- </div> -->
+</div>
 
 <%= render 'shared/navbardropdownjs' %>
 <!-- YAMLI CODE START -->
