--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
   <div role="main" id="main">
     <div class="container">
       <div class="content">
-        <%= render 'layouts/messages' %>
+        <%= render "layouts/messages" %>
         <%= content_for?(:main_content) ? yield(:main_content) : yield %>
       </div>
     </div>
